--- a/index.html
+++ b/index.html
@@ -1,31 +1,56 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt_BR">
 	<head>
-		<title> Projeto StartPage</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
-	<body>
-	<header>
-		<caption>Grupo Mateus</caption>
-		<h2>Olá, CPD!</h2>
-			<ul>
-			<li>Test</li>
-			<li>Test</li>
-			<li>Test</li>
-			<li>Test</li>
-		</ul>
-		<hr>Test
-	</header>
-		<h1>Título 1</h1>
-		<h2>Título 2</h2>
-		<section>
-			Perhaps it's my content
-			<h2> My first JavaScript</h2>
-			<p id="demo"> JavaScript can change HTML content.</p>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Startpage</title>
 
-			<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello World!"'>Click Me!</button>
-		</section>
-	<footer>
-		It's my feet
-	</footer>
+		<script src="https://code.jquery.com/jquery-2.2.0.js"></script>
+
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/reset.css">
+
+
+		<script src="weather.js"></script>
+		<script src="clock.js"></script>
+	</head>
+	<body onload="startTime()">
+		<div class="container">
+			<div id="content" class="vcenter">
+				<h1 id="clock"></h1>
+
+				<div id="weather">
+					<h2 id="description"></h2>
+					<h3 id="temp_curr">
+						<small id="temp_low"></small>
+						<small id="temp_high"></small>
+					</h3>
+				</div>
+
+				<div id="inputs">
+					<form method="get" action="http://www.google.com/search">
+						<div class="input-group">
+							<input name="q" type="text" class="form-control" placeholder="Google" autofocus>
+							<span class="input-group-btn">
+								<button type="submit" class="btn btn-default">Search</button>
+							</span>
+						</div>
+					</form>
+
+					<div class="btn-group">
+						<a class="btn btn-default" href="http://reddit.com">reddit</a>
+						<a class="btn btn-default" href="http://amazon.com">amazon</a>
+						<a class="btn btn-default" href="http://netflix.com">netflix</a>
+						<a class="btn btn-default" href="http://hulu.com">hulu</a>
+						<a class="btn btn-default" href="http://youtube.com">youtube</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
+
