--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 		
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/reset.css">
+		<!--link rel="stylesheet" href="css/reset.css"-->
 
 
-		<script src="weather.js"></script>
 		<script src="clock.js"></script>
 	</head>
 	<body onload="startTime()">
@@ -23,29 +22,22 @@
 			<div id="content" class="vcenter">
 				<h1 id="clock"></h1>
 
-				<div id="weather">
-					<h2 id="description"></h2>
-					<h3 id="temp_curr">
-						<small id="temp_low"></small>
-						<small id="temp_high"></small>
-					</h3>
-				</div>
 
 				<div id="inputs">
-					<form method="get" action="http://www.google.com/search">
+					<form method="get" action="http://www.startpage.com/">
 						<div class="input-group">
-							<input name="q" type="text" class="form-control" placeholder="Google" autofocus>
+							<input name="do/search" type="text" class="form-control" placeholder="StartPage" autofocus>
 							<span class="input-group-btn">
-								<button type="submit" class="btn btn-default">Search</button>
+								<button type="submit" class="btn btn-default">Buscar</button>
 							</span>
 						</div>
 					</form>
 
 					<div class="btn-group">
-						<a class="btn btn-default" href="http://reddit.com">reddit</a>
-						<a class="btn btn-default" href="http://amazon.com">amazon</a>
-						<a class="btn btn-default" href="http://netflix.com">netflix</a>
-						<a class="btn btn-default" href="http://hulu.com">hulu</a>
+						<a class="btn btn-default" href="http://www.armateus.com.br/rain">E-mail Mateus</a>
+						<a class="btn btn-default" href="http://suporte.mateus">Departamento T.I</a>
+						<a class="btn btn-default" href="#">MaxiPos</a>
+						<a class="btn btn-default" href="http://web.telegram.org">Telegram Web</a>
 						<a class="btn btn-default" href="http://youtube.com">youtube</a>
 					</div>
 				</div>
